CSS: Prevent awkward overflows by making top element fixed

--- a/LAD-Java/src/lad/files/game.css
+++ b/LAD-Java/src/lad/files/game.css
@@ -55,12 +55,13 @@ p.weaponSelector button {
 #ladbkgd {
     top: 0px;
     left: 0px;
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
     background-color: #121212;
     z-index: 200;
     color: #EFEFEF;
+    overflow: auto;
 }
 
 #closelad {
